[package]
name = "driver"
version = "0.1.0"
edition = "2021"
description = "Compile Rust-like source code to x86-64 assembly."

[[bin]]
name = "boba"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
compiler = { path = "../compiler" }
